cleaned some of the component files, debugging a small bug for user uploading photo on mobile

--- a/client/src/components/navbar/navbar.styles.scss
+++ b/client/src/components/navbar/navbar.styles.scss
@@ -202,7 +202,7 @@
 
         input {
           margin-right: 3.5rem;
-          // transform: scale(1.2);
+          transform: scale(1.2);
         }
 
         // &--input {
